--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -70,20 +70,21 @@
 		}
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.9",
-		"@types/react-dom": "^18.0.4",
+		"@types/react": "^18.2.42",
+		"@types/react-dom": "^18.2.17",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.15.0",
-		"postcss": "^8.4.30",
+		"eslint": "^8.55.0",
+		"postcss": "^8.4.32",
 		"postcss-cli": "^10.1.0",
 		"postcss-combine-duplicated-selectors": "^10.0.3",
-		"postcss-custom-media": "^10.0.1",
+		"postcss-custom-media": "^10.0.2",
 		"postcss-discard-empty": "^6.0.0",
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^12.0.1",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"typescript": "^4.5.3"
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.2"
 	},
 	"publishConfig": {
 		"access": "public"
