--- a/packages/combobox/tsconfig.json
+++ b/packages/combobox/tsconfig.json
@@ -13,6 +13,6 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"alwaysStrict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
 	}
 }
