--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -42,8 +42,7 @@
 		"lint": "pnpm lint:js && pnpm lint:css",
 		"lint:js": "eslint \"src/**/*.ts*\"",
 		"lint:css": "stylelint \"src/**/*.css\"",
-		"clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist && rm -rf styles.css",
-		"prepublishOnly": "pnpm lint"
+		"clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist && rm -rf styles.css"
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.0.5",
@@ -70,6 +69,7 @@
 		}
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.27.1",
 		"@types/react": "^18.2.42",
 		"@types/react-dom": "^18.2.17",
 		"autoprefixer": "^10.4.16",
